# LearnFrom3D

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  QtUI.cpp  QtUI.h  QtUI.ui  main.cpp
